# tonversego_backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml.example  pyproject.toml  requirements.txt
database/: __init__.py  models.py
routers/: admin.py  nft.py  user.py
schemas/: nft.py  user.py
scripts/: start.sh
utils/: bot_messages.py  geoposition.py  ipfs.py
